dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/weex.c)

PACKAGE=weex
VERSION=3.0.0pre1
ALL_LINGUAS="ja"

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AM_CONFIG_HEADER(config.h)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL


dnl for gettext
AM_GNU_GETTEXT
AC_CHECK_FUNC(gettext, , AC_CHECK_LIB(intl, gettext))
localedir='${prefix}/share/locale'
AC_SUBST(localedir)


dnl Checks for libraries.
AC_CHECK_LIB(readline, readline)
AC_CHECK_LIB(ncurses, tputs)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, gethostbyname)


dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h string.h sys/time.h unistd.h gnuregex.h regex.h)
AC_CHECK_HEADER(gnuregex.h, gnuregex_ok=yes, gnuregex_ok=no)
if test "$gnuregex_ok"=no; then
  AC_CHECK_HEADER(regex.h, , AC_MSG_ERROR(GNU regex library is not installed.))
fi


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM


dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MMAP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd getwd mkdir putenv regcomp select socket strdup strerror strstr strtod strtol strtoul)
      

dnl 
AC_C_INLINE
if test x$CC=xgcc; then
   CFLAGS="$CFLAGS -Wall -O0"
fi     
      

AC_OUTPUT(Makefile intl/Makefile src/Makefile po/Makefile.in \
debian/Makefile doc/Makefile man/Makefile weex.spec)
